# sendgrid-cli

./: .gitattributes  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  drift.yml  release.yml
crates/cli/: Cargo.toml  README.md
crates/cli/src/: auth.rs  envelope.rs  globals.rs  jobs.rs  main.rs  output.rs  resolve.rs  search.rs  tree.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: ir.rs  lib.rs  registry.rs  search.rs
crates/core/src/runtime/: apply_defaults.rs  auth.rs  build.rs  coerce.rs  dispatch.rs  envelope.rs  http.rs  jobs.rs  mod.rs  paginate.rs  region.rs  retry.rs  safety.rs  validate.rs
crates/core/tests/: contract.rs  dispatch_harness.rs  golden_requests.rs  live_smoke.rs  registry_smoke.rs  runtime_exec.rs  security.rs
crates/core/tests/snapshots/: golden_requests__golden_array_query_explode_false_comma_joined.snap  golden_requests__golden_array_query_explode_true_repeated_keys.snap  golden_requests__golden_cli_coercion_comma_array.snap  golden_requests__golden_cli_coercion_integer_and_boolean.snap  golden_requests__golden_sendmail_full_envelope.snap  golden_requests__golden_top_level_array_body.snap
crates/mcp/: Cargo.toml  README.md
crates/mcp/docs/: reference-async-jobs.md  reference-regions.md  reference-side-effects.md  skill-using-the-server.md
crates/mcp/examples/: stdio_smoke.rs
crates/mcp/src/: describe.rs  docs.rs  instructions.rs  invoke.rs  lib.rs  prompts.rs  schema.rs  search.rs  server.rs  shape.rs  text.rs
data/: async_jobs.toml  constraints.toml  defaults.toml  pagination.toml  region.toml  safety.toml  taxonomy.toml
docs/: architecture.md  limitations.md  safety.md
xtask/: Cargo.toml
xtask/src/: build.rs  codegen.rs  drift.rs  emit.rs  lib.rs  main.rs  schema.rs  specs.rs  tables.rs
xtask/tests/: l1.rs
