[workspace]
resolver = "2"
members = ["crates/core", "crates/cli", "crates/mcp", "xtask"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
license = "MIT"
repository = "https://github.com/andrii/sendgrid-agent-cli"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
toml = "0.8"

# Spec parsing (P0): openapiv3 2.2.0 parses all 46 SendGrid 3.1-stamped/3.0-shaped specs
# and is the same version progenitor pins, so one parser serves both bake-off backends.
openapiv3 = "2.2.0"
# JSON Schema 2020-12 validation (L1 gate + runtime body validation).
jsonschema = "0.18"

# Local path deps
sendgrid-core = { path = "crates/core" }

# Release profile — optimize the shipped `sendgrid` binary for size + startup.
#   lto = true            cross-crate link-time optimization (smaller, faster)
#   codegen-units = 1     maximal optimization at the cost of compile parallelism
#   strip = true          drop debug symbols from the artifact (smaller binary)
#   panic = "abort"       no unwinding tables; a panic aborts (the CLI exits anyway)
# `panic = "abort"` applies only to the shipped binary. Cargo automatically builds
# `test`/`bench` targets with `unwind` regardless of this setting, so BOTH
# `cargo test` and `cargo test --release` build and pass unaffected (verified on
# 1.96: `cargo test --release --no-run` compiles every test executable cleanly).
[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
