[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "xtask"
path = "src/lib.rs"

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
sendgrid-core.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
toml.workspace = true
openapiv3.workspace = true
# draft202012 is a non-default jsonschema feature; enabled here (not in the root
# workspace dep) so codegen can self-gate every emitted INPUT schema as valid 2020-12.
jsonschema = { workspace = true, features = ["draft202012"] }
