[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
name = "xtask"
path = "src/lib.rs"

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
sendgrid-core.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
toml.workspace = true
openapiv3.workspace = true
# jsonschema 0.46 builds all drafts in by default (the old `draft202012` feature
# is obsolete); codegen self-gates every emitted INPUT schema as valid 2020-12 by
# forcing the dialect at build time via `draft202012::options()`.
jsonschema.workspace = true
