[package]
name = "sendgrid-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "sendgrid"
path = "src/main.rs"

[dependencies]
sendgrid-core.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
