[package]
name = "sendgrid-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "sendgrid"
path = "src/main.rs"

[dependencies]
sendgrid-core.workspace = true
sendgrid-mcp = { path = "../mcp" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
# Dynamic command tree built at runtime from the IR (builder API, not derive).
clap = "4"
# CLI owns the async runtime; execute() is async.
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }

[dev-dependencies]
# Construct `RawResponse.status` (http::StatusCode) in download-write unit tests.
# Pinned to core's `http = "1"`; the lockfile already resolves it transitively.
http = "1"
