[package]
name = "sendgrid-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Agent-friendly command-line interface for the SendGrid v3 API: search, describe, dry-run, and safely invoke all 391 operations. Installs the `sendgrid` binary; also serves the bundled MCP server via `sendgrid mcp`."
readme = "README.md"
keywords = ["sendgrid", "email", "cli", "api", "agent"]
categories = ["command-line-utilities", "email"]

[[bin]]
name = "sendgrid"
path = "src/main.rs"

[dependencies]
sendgrid-core.workspace = true
# `version` REQUIRED for `cargo publish` (path is stripped on package; resolves from
# crates.io). Keep in lockstep with the workspace version.
sendgrid-mcp = { path = "../mcp", version = "0.1.0" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
# Dynamic command tree built at runtime from the IR (builder API, not derive).
clap = "4"
# CLI owns the async runtime; execute() is async.
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std"] }

[dev-dependencies]
# Construct `RawResponse.status` (http::StatusCode) in download-write unit tests.
# Pinned to core's `http = "1"`; the lockfile already resolves it transitively.
http = "1"
