[package]
name = "sendgrid-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Model Context Protocol (MCP) server exposing all 391 SendGrid v3 API operations to AI agents through a search → describe → invoke meta-tool surface."
readme = "README.md"
keywords = ["sendgrid", "email", "mcp", "api", "agent"]
categories = ["api-bindings", "email"]

[dependencies]
sendgrid-core.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
# rmcp 1.7.0: stdio MCP server. We hand-implement `ServerHandler` (no `#[tool]`
# derive macros) so tool names + input schemas are built from runtime IR data.
rmcp = { version = "1.7.0", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }
# A localhost SendGrid mock the real ReqwestDispatcher drives end-to-end (via
# RuntimeConfig::base_url_override) to test the reveal/shaping/await behavior of
# invoke without a live network.
wiremock = "0.6"
